Remove mention of JSON output from README (already done)

--- a/README
+++ b/README
@@ -10,4 +10,4 @@ option, any later version.
 The current version only works on very old Skype logs, and provides a
 simple front-end which merely dumps the Lua table built from the log.
 
-Support for newer logs and JSON output is planned.
+Support for newer logs is planned.
