Add a notice that the code is obsolete

--- a/README
+++ b/README
@@ -3,6 +3,8 @@
 
                  © Reuben Thomas <rrt@sc3d.org> 2011
 
+THIS PROGRAM IS OBSOLETE. It does not work with Skype clients from about
+2011 onwards.
 
 A simple Skype log parser, released under the GPLv3 or, at your
 option, any later version.
